--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <application android:allowBackup="true" android:label="@string/app_name"
         android:icon="@drawable/ic_launcher" android:theme="@style/AppTheme">
+        <service android:name=".CoapBackgroundService" />
         <activity android:name=".CoapServerMainActivity"
             android:label="@string/app_name">
             <intent-filter>
